Multi-delete button

--- a/admin-ui/src/app/dashboard/dashboard.component.html
+++ b/admin-ui/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="left">
             <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
-            <button pButton pRipple [label]="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedlayers()" [disabled]="!selectedlayers || !selectedlayers.length"></button>
+            <button pButton pRipple [label]="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedlayers()" [disabled]="!selectedLayers || !selectedLayers.length"></button>
         </ng-template>
     </p-toolbar>
 
