Add welcome component and service
Signed-off-by: Jason Ball <jasonericball@gmail.com>

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div class="map-viewport">  
+<div class="map-viewport">
   <app-map [center]="mapCenter" [basemap]="basemapType" [zoom]="mapZoomLevel"
     (mapLoadedEvent)="mapLoadedEvent($event)">
   </app-map>
+  <app-welcome></app-welcome>
 </div>
