--- a/admin-ui/src/app/dashboard/dashboard.component.html
+++ b/admin-ui/src/app/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
 
         <div class="p-field">
             <div class="p-formgrid p-grid">
-                <p-fileUpload name="geoJSON" mode="basic" accept=".JSON" [maxFileSize]="1000000" label="Upload" chooseLabel="Upload" class="p-mr-2 p-d-inline-block" (onSelect)="handleFile($event)"></p-fileUpload>
+                <p-fileUpload name="geoJSON" mode="basic" accept=".JSON" label="Upload" chooseLabel="Upload" class="p-mr-2 p-d-inline-block" (onSelect)="handleFile($event)"></p-fileUpload>
             </div>
         </div>
     </ng-template>
