Added a spinner that shows while the map is loading.

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -2,4 +2,7 @@
   <app-map [center]="mapCenter" [basemap]="basemapType" [zoom]="mapZoomLevel"
     (mapLoadedEvent)="mapLoadedEvent($event)">
   </app-map>
+  <div class="spinner">
+    <p-progressSpinner *ngIf="loading"></p-progressSpinner>
+  </div>
 </div>
