--- a/admin-ui/src/app/dashboard/dashboard.component.html
+++ b/admin-ui/src/app/dashboard/dashboard.component.html
@@ -69,11 +69,11 @@
 
         <div class="p-field">
             <div class="p-formgrid p-grid">
-                <p-fileUpload name="geoJSON" mode="basic" accept=".JSON" label="Upload" chooseLabel="Upload" class="p-mr-2 p-d-inline-block" (onSelect)="handleFile($event)"></p-fileUpload>
+                <p-fileUpload name="geoJSON" mode="basic" accept=".json,.geojson" label="Upload" chooseLabel="Upload" class="p-mr-2 p-d-inline-block" (onSelect)="handleFile($event)"></p-fileUpload>
             </div>
         </div>
     </ng-template>
-    
+
     <ng-template pTemplate="footer">
         <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
         <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveLayer()"></button>
