--- a/admin-ui/src/styles.scss
+++ b/admin-ui/src/styles.scss
@@ -1,3 +1,7 @@
+@import '../node_modules/primeng/resources/primeng.min.css';
+@import '../node_modules/primeng/resources/themes/saga-blue/theme.css';
+@import '../node_modules/primeicons/primeicons.css';
+
 /* Global sytle imports and declarations */
 .p-button {
     margin-right: 1em !important;
