--- a/ui/src/app/map/map.component.html
+++ b/ui/src/app/map/map.component.html
@@ -1,6 +1,11 @@
 <!-- Here's the DIV that we inject the map into -->
 <div #mapViewNode></div>
+
 <div id="mapMenuButton" class="esri-widget esri-component">
   <button pButton type="button" label="Hypermap Menu" icon="pi pi-bars" class="p-button-lg" (click)="hypermapMenu.toggle($event)"></button>
   <p-menu #hypermapMenu id="hypermapMenu" [popup]="true" [model]="hypermapMenuItems" appendTo="body"></p-menu>
+</div>
+
+<div id="detailsModal" class="esri-widget esri-component" height='500' width='1000' background-color="white">
+  <div><app-details-modal *ngIf="showDetails" [details]="curDetails"></app-details-modal></div>
 </div>
