Make popups smaller
Signed-off-by: Jason Ball <jason@jasonball.dev>

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -71,3 +71,15 @@ canvas:focus {
 .esri-feature-content p {
   margin-bottom: 0.75em !important;
 }
+
+.purpleair-chart p.chart-last-updated {
+  margin-bottom: 0 !important;
+}
+
+p.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+p.mt-0, h1.mt-0, h2.mt-0 {
+  margin-top: 0 !important;
+}
